--- a/Tour-of-Heroes-angular/angular.json
+++ b/Tour-of-Heroes-angular/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "my-app"
+    }
+  },
+  "defaultProject": "my-app",
+  "cli": {
+    "analytics": "1022113a-f14f-4a01-ae31-7a51d172a0a7"
+  }
 }
